# app/handler/author/read_author_handler.go
@@ -1,35 +1,33 @@
-package categories
+package author
 
 import (
 	"database/sql"
 	"net/http"
 
-	"github.com/JoaoGeraldoS/API-biblioteca/app/controller/categories"
+	"github.com/JoaoGeraldoS/API-biblioteca/app/controller/author"
 	"github.com/JoaoGeraldoS/API-biblioteca/app/models"
 	"github.com/JoaoGeraldoS/API-biblioteca/app/validacao"
 	"github.com/gin-gonic/gin"
 )
 
 // Ler as e retorna os dados do banco
-// @Summary Ler as categorias
-// @Description Ler e restorna os dados das categorias
-// @Tags Categorias
+// @Summary Ler os autores
+// @Description Ler e restorna os dados dos autores
+// @Tags Authors
 // @Accept json
 // @Produce json
 // @Param Authorization header string true "Bearer token"
-// @Success 200 {object} validacao.GenericResponse[models.Categories] "Execultada com sucesso"
+// @Success 200 {object} validacao.GenericResponse[models.Authors] "Execultada com sucesso"
 // @Failure 404 {string} validacao.ErrorResponse "Dados não existentes"
-// @Router /admin/categories [get]
-func ReadCategoriesHandler(db *sql.DB) gin.HandlerFunc {
+// @Router /admin/authors [get]
+func ReadAuthorsHandler(db *sql.DB) gin.HandlerFunc {
 	return func(ctx *gin.Context) {
-
-		response, err := categories.ReadCategories(db)
+		response, err := author.ReadAuthors(db)
 		if err != nil {
 			ctx.JSON(http.StatusNotFound, gin.H{"erro": "dados nao encontrados!"})
 			return
 		}
 
-		ctx.JSON(http.StatusOK, validacao.GenericResponse[models.Categories]{Items: response})
-
+		ctx.JSON(http.StatusOK, validacao.GenericResponse[models.Authors]{Items: response})
 	}
 }
